<resources>
    <string name="app_name">JunCalc</string>
    <string name="is_equal">Равно?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equally">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="dropping">C</string>
    <string name="counter_1">Counter1</string>
    <string name="counter_2">Counter2</string>
    <string name="night_theme">Night theme</string>
    <string name="light_theme">Light theme</string>
    <string name="customization">Настройки</string>
</resources>