<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/rounded_frame_stile_lite"
        android:fillViewport="true">

        <TextView
            android:id="@+id/text_calc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/window_calc_number_size"
            android:textStyle="bold"
            tools:text="123456789" />

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_3"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:theme="@style/ButtonCalc"
            style="@style/ButtonCalc"
            android:background="@drawable/button_stile_3"
            android:text="@string/plus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_4"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_6"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:theme="@style/ButtonCalc"
            style="@style/ButtonCalc"
            android:background="@drawable/button_stile_3"
            android:text="@string/minus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_7"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_8"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/_9"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            android:theme="@style/ButtonCalc"
            style="@style/ButtonCalc"
            android:background="@drawable/button_stile_3"
            android:text="@string/multiply"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:layout_weight="2.04"
            android:background="@drawable/button_stile_1"
            android:text="@string/_0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            android:theme="@style/ButtonNumber"
            style="@style/ButtonNumber"
            android:background="@drawable/button_stile_1"
            android:text="@string/dot"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            android:theme="@style/ButtonCalc"
            style="@style/ButtonCalc"
            android:background="@drawable/button_stile_3"
            android:text="@string/divide"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/OperationCalc">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dropping"
            style="@style/OperationCalc"
            android:layout_weight="1"
            android:background="@drawable/button_stile_2"
            android:text="@string/dropping"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equally"
            style="@style/OperationCalc"
            android:layout_weight="1"
            android:background="@drawable/button_stile_2"
            android:text="@string/equally"/>

    </LinearLayout>

</LinearLayout>